@@ -231,6 +231,10 @@
   "size"                        "Size"
   "socket"						"Socket"
   "sound"                       "Sound file"
+  "#sound_on"                   "Sound ON"
+  "#sound_off"                  "Sound OFF"  
+  "#sound_is_on"                "Sound is ON"
+  "#sound_is_off"               "Sound is OFF"
   "sound_file_name"             "Sound file name"
   "sort_by"                     "Sort contact list"
   "sort_by_name"                "By name"
