@@ -240,6 +240,10 @@
   "size"                        "Размер"
   "socket"						"Сокет"
   "sound"                       "Звуковой файл"
+  "#sound_on"                   "Вкл. звук"
+  "#sound_off"                  "Откл. звук"
+  "#sound_is_on"                "Звук включен"
+  "#sound_is_off"               "Звук отключен"
   "sound_file_name"             "Имя звукового файла"
   "sort_by"                     "Сортировать контакт-лист"
   "sort_by_name"                "По имени"
